--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,3 +17,6 @@ steps:
     echo Add other tasks to build, test, and deploy your project.
     echo See https://aka.ms/yaml
   displayName: 'Run a multi-line script'
+- task: test-azure-devops-bar@0
+  inputs:
+    samplestring: 'test xerecter azure extensions'
